Fixes the full-page posts overflow bug in Chrome and Safari

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -1506,7 +1506,8 @@
 }
 
 .full-page-post {
-  width: 540px;
+  width: 100%;
+  max-width: 540px;
   margin: 0 auto;
 }
 
